Keyframing problem with SHIFT+D #59005

Closed
opened 2018-12-08 07:20:52 +01:00 by ameen vengara · 6 comments

System Information
Operating system: Win 10

Blender Version
Broken: 2.8 beta
Worked: 2.79

Short description of error
duplicating and replacing key frames using SHIFT+D makes some weird results. Please see the video

Exact steps for others to reproduce the error
ScreenCapture_08-12-2018 11.47.11.xesc

**System Information** Operating system: Win 10 **Blender Version** Broken: 2.8 beta Worked: 2.79 **Short description of error** duplicating and replacing key frames using SHIFT+D makes some weird results. Please see the video **Exact steps for others to reproduce the error** [ScreenCapture_08-12-2018 11.47.11.xesc](https://archive.blender.org/developer/F5881744/ScreenCapture_08-12-2018_11.47.11.xesc)
Author

Added subscriber: @ameenvengara

Added subscriber: @ameenvengara
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

When you do this you are ending up with 2 keyframes on the same frame.

This only seems to happen when you move/duplicate keyframes in the timeline-dopesheet (whereas when you do this in the Graph Editor ot the 'real' Dopesheet, these seem to be merged automatically...)
This is happening/should happen in posttrans_fcurve_clean(), will check why this is not happening here...

When you do this you are ending up with 2 keyframes on the same frame. This only seems to happen when you move/duplicate keyframes in the timeline-dopesheet (whereas when you do this in the Graph Editor ot the 'real' Dopesheet, these seem to be merged automatically...) This is happening/should happen in `posttrans_fcurve_clean()`, will check why this is not happening here...

This issue was referenced by e4153946ad

This issue was referenced by e4153946ad1e81c697b8d51d92a3e2f088d0af4d
Member

Not 100% sure if we run into trouble with D4061, but at least this is now also merging the keyframes (as in the 'real' Dopesheet)

Not 100% sure if we run into trouble with [D4061](https://archive.blender.org/developer/D4061), but at least this is now also merging the keyframes (as in the 'real' Dopesheet)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59005
No description provided.